[package]
name = "async-3-tarea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.144", features = ["derive"] }
futures = "0.3.15"
lazy_static = "1.4.0"