[package]
name = "channels-actores-tarea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std-semaphore = "0.1"
druid = { version = "0.7.0", features = ["image", "png"]}
rand = "0.7"
num-traits = "0.2"
num-derive = "0.3"

