[package]
name = "sincronizacion-5-tarea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std-semaphore = "0.1"
rand = "0.7"

[[bin]]
name = "filosofos"
path = "src/filosofos.rs"

[[bin]]
name = "filosofos_como_semaforos"
path = "src/filosofos_como_semaforos.rs"

